--- a/GDP/package.json
+++ b/GDP/package.json
@@ -15,7 +15,8 @@
     "react-native-gesture-handler": "^1.0.16",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
