--- a/GDP/package.json
+++ b/GDP/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "^31.0.2",
+    "firebase": "^5.8.5",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-maps": "^0.23.0",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
