--- a/GDP/package.json
+++ b/GDP/package.json
@@ -13,6 +13,7 @@
     "firebase": "^5.8.5",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-dropdown-menu": "^2.0.0",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-maps": "^0.23.0",
