--- a/GDP/package.json
+++ b/GDP/package.json
@@ -16,7 +16,9 @@
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-google-maps-directions": "^2.0.0",
     "react-native-maps": "^0.23.0",
+    "react-native-maps-navigation": "^0.0.14",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
