--- a/GDP/package.json
+++ b/GDP/package.json
@@ -11,12 +11,22 @@
   "dependencies": {
     "expo": "^31.0.2",
     "firebase": "^5.8.5",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
+    "react-native-alert-pro": "^1.0.1",
+    "react-native-awesome-alert": "^0.4.0",
+    "react-native-countdown-circle": "^3.0.0",
+    "react-native-dialog": "^5.6.0",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-maps": "^0.23.0",
+    "react-native-material-menu": "^0.4.2",
+    "react-native-popup-dialog": "^0.18.2",
+    "react-native-popup-menu": "^0.15.5",
+    "react-native-star-rating": "^1.1.0",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
